--- a/dist.ini
+++ b/dist.ini
@@ -1,2 +1,7 @@
 [ReadmeFromPod]
 enable = false
+
+[Badges]
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
