--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,2 @@
 [ReadmeFromPod]
-enable   = true
-filename = docs/README.rakudoc
-
-[Badges]
-provider = github-actions/linux.yml
-provider = github-actions/macos.yml
-provider = github-actions/windows.yml
+enable = false
